# aws-lambda-prototype

./: Cargo.toml  README.md
src/: main.rs
