[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "AWS SDK for Rust Lambda Prototype"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "aws-lambda-prototype"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/aws-lambda-prototype"
version = "0.0.0-SNAPSHOT"

[dependencies]
aws-config = "0.57.2"
aws-sdk-s3 = "0.36.0"
lambda_runtime = "0.8.3"
serde = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "1.34", features = ["macros"] }
tracing = { version = "0.1.40", features = ["log"] }

[dependencies.tracing-subscriber]
default-features = false
features = ["fmt"]
version = "0.3.18"
